# sbb_hw6

./: CMakeLists.txt  README.md  hw6.launch  package.xml
scripts/: .calibrate_camera.py.swp  arm_interface.py  ball_side.py  ball_side_depth.py  baxter_pykdl.py  calibrate_camera.py  controller.py  locate_stuff.py  robot_interface.py
srv/: FindStuffSrv.srv
